# zed

./: Cargo.toml
assets/settings/: default.json
crates/editor/src/: editor.rs  editor_settings.rs
crates/search/src/: buffer_search.rs
crates/search_panel/: Cargo.toml
crates/search_panel/src/: search_panel.rs  search_panel_settings.rs
crates/settings/src/: vscode_import.rs
crates/settings_content/src/: editor.rs  settings_content.rs
crates/settings_ui/src/: page_data.rs  settings_ui.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
